<resources>
    <string name="app_name">MyTravelApp</string>

    <string name="font_regular">fonts/barlow_regular.ttf</string>
    <string name="font_saltery_regular">fonts/Saltery_Regular.ttf</string>
    <string name="font_saltery_alternate_rough">fonts/Saltery_Alternate_Rough.ttf</string>
    <string name="font_saltery_alternate">fonts/Saltery_Alternate.ttf</string>
    <string name="text_member"><u>Why being a member?</u></string>
    <string name="text_login_without_acc"><u>Log In without Account</u></string>
    <string name="text_remember">Remember Me</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="forgot_pass"><u>Forgot Password?</u></string>
    <string name="email">E-Main</string>
    <string name="retype_pass">Retype Password</string>
    <string name="login_profile">Login / Profile</string>
    <string name="discover_area">Discover Area</string>
    <string name="plan_trip">Plan Trip</string>
    <string name="tour_guide">Tour Guide</string>
    <string name="friends_hangout">Friends Hangout</string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>
    <string name="upcomming_trip">Upcomming Trip</string>
    <string name="tips_help"><u>Tips And Help</u></string>
    <string name="profile_overview">Overview</string>
    <string name="google_map_key">AIzaSyALHKqNh3ZNpWimYOG_72nLmBMrCbhenyM</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
