<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ic_background"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                android:layout_marginTop="@dimen/_40sdp"
                android:src="@drawable/ic_logos"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Register For Free"
                android:textStyle="bold"
                android:textColor="@color/register_text"
                android:textSize="@dimen/_14sdp"
                android:layout_gravity="center_horizontal"/>

            <android.support.design.widget.TextInputLayout style="@style/text_input_style"
                android:backgroundTint="@color/white">

                <EditText
                    android:id="@+id/et_username_register"
                    style="@style/et_login"
                    android:hint="@string/username"
                    android:drawableLeft="@drawable/ic_register_white"
                    android:imeOptions="actionNext"
                    android:drawablePadding="@dimen/_10sdp"
                    android:textColorHint="@color/white"
                    app:backgroundTint="@color/white" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout style="@style/text_input_style"
                android:backgroundTint="@color/white">

                <EditText
                    android:id="@+id/et_email_register"
                    style="@style/et_login"
                    android:hint="@string/email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:drawableLeft="@drawable/ic_email"
                    android:drawableRight="@drawable/ic_visible"
                    android:drawablePadding="@dimen/_10sdp"
                    app:backgroundTint="@color/white"
                    android:textColorHint="@color/white"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout style="@style/text_input_style"
                android:backgroundTint="@color/white">

                <EditText
                    android:id="@+id/et_pass_register"
                    style="@style/et_login"
                    android:hint="@string/password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:drawableLeft="@drawable/ic_pass"
                    android:drawableRight="@drawable/ic_visible"
                    android:drawablePadding="@dimen/_10sdp"
                    app:backgroundTint="@color/white"
                    android:textColorHint="@color/white"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout style="@style/text_input_style"
                android:backgroundTint="@color/white">

                <EditText
                    android:id="@+id/et_retypepass_register"
                    style="@style/et_login"
                    android:hint="@string/retype_pass"
                    android:imeOptions="actionDone"
                    android:drawableLeft="@drawable/ic_pass"
                    android:drawableRight="@drawable/ic_visible"
                    android:drawablePadding="@dimen/_10sdp"
                    android:inputType="textPassword"
                    app:backgroundTint="@color/white"
                    android:textColorHint="@color/white"/>

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColor="@color/white"
                android:text="@string/text_member"
                android:textSize="@dimen/_13sdp"/>

            <LinearLayout
                android:layout_width="@dimen/_170sdp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/send_bg">

                <TextView
                    android:layout_width="@dimen/_130sdp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="Send"
                    android:gravity="center_horizontal"
                    android:drawableRight="@drawable/ic_arrow"
                    android:drawablePadding="@dimen/_15sdp"
                    android:textSize="@dimen/_14sdp"
                    android:textColor="@color/white"/>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/_10sdp">

                <TextView
                    android:id="@+id/tv_remember_signIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_50sdp"
                    android:text="Remember Me"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:textColor="@color/rounded_border"/>

                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/tv_remember_signIn"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:backgroundTint="@color/colorPrimary"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/_10sdp">

                <TextView
                    android:id="@+id/tv_push_msg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_50sdp"
                    android:text="Push Message"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:textColor="@color/rounded_border"/>

                <Switch
                    android:id="@+id/switch_pushmsg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/tv_push_msg"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:backgroundTint="@color/colorPrimary"/>

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</layout>